@@ -7,6 +7,8 @@ xine-lib (1.1.4)
   * Applied the patch to fix text relocation, provided by PaX Team for Gentoo
     and previously applied by other distributions as well. Fixes the non-PIC
     code being generated.
+  * Fix race condition in audio_out by using a recursive mutex; patch by
+    Reinhard Nissl. [bug #1551911]
 
 xine-lib (1.1.3)
   * Security fixes:
